--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,19 @@
 /*  your css code here. If applicable */
+:root{
+	background-color:rgb(135, 206, 235);
+}
+div:first-child{
+	color:white;
+	background-color:black;
+}
+div:nth-child(2){
+	color:black;
+}
+div:last-child{
+	color:red;
+}
+li{
+	background-color:grey;
+	width:50%;
+	padding:10px
+}
