--- a/styles.css
+++ b/styles.css
@@ -2,14 +2,14 @@
 :root{
 	background-color:rgb(135, 206, 235);
 }
-div:first-child{
+div p:first-child{
 	color:white;
 	background-color:black;
 }
-div:nth-child(2){
+div p:nth-child(2){
 	color:black;
 }
-div:last-child{
+div p:last-child{
 	color:red;
 }
 li{
